--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -165,7 +165,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: C++, Python,  CSS, HTML, \LaTeX } \\
-     \textbf{Technologies}{: Linux(EndeavorOS), NeoVim, GitHub, Touch typing(70wpm)} \\
+     \textbf{Technologies}{: Linux(EndeavorOS), NeoVim, GitHub, Touchtyping(70wpm)} \\
      \textbf{Mathematical Interests}{: Geometry, Combinatorics}\\
     }}
  \end{itemize} 
@@ -188,7 +188,7 @@
       {Gonitzoggo}{March 2024 -- Current}
       {Coordinator}{Remote}
       \resumeItemListStart
-        \resumeItem{Host of the calibration contests. }
+        \resumeItem{Hosted calibration contests. }
       \resumeItemListEnd
 
     \resumeSubheading
@@ -200,7 +200,7 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {BRAC University | CSE422 }{May 2024 -- Current}
+      {BRAC University | CSE422 }{May 2024 -- August}
       {Lecture Support Aid}{Dhaka, Bangladesh}
       \resumeItemListStart
         \resumeItem{Edited teaching materials with \LaTeX for the CSE422 (Artificial Intelligence) course, weekly}
