--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -164,7 +164,7 @@
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: C++, Python,  CSS, HTML, \LaTeX } \\
+     \textbf{Languages}{: C++, CSS, HTML, \LaTeX } \\
      \textbf{Technologies}{: Linux(EndeavorOS), NeoVim, GitHub, Touchtyping(70wpm)} \\
      \textbf{Mathematical Interests}{: Geometry, Combinatorics}\\
     }}
