--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -177,7 +177,7 @@
 
     \resumeSubheading
       {Gonitzoggo }{September 2023 -- Current}
-      {Academic Team Member }{Remote}
+      {Academic Team Member }{Remote, Part-time}
       \resumeItemListStart
         \resumeItem{Mentored 200+ students throughout the course}
         \resumeItem{Mentored 50+ female math contestants exclusively}
@@ -186,14 +186,14 @@
   
     \resumeSubheading
       {Gonitzoggo}{March 2024 -- Current}
-      {Coordinator}{Remote}
+      {Coordinator}{Remote, Part-time}
       \resumeItemListStart
         \resumeItem{Hosted calibration contests. }
       \resumeItemListEnd
 
     \resumeSubheading
     {TEMS (Truthful Enlightened Mathematical Soul) }{December 2023 -- Current}
-      {Instructor}{Dhaka, Bangladesh}
+      {Instructor, Part-time}{Dhaka, Bangladesh}
       \resumeItemListStart
         \resumeItem{Mentored 100+ students}
         \resumeItem{Provided practice materials, problems sets; graded their answerpapers}
@@ -201,7 +201,7 @@
 
     \resumeSubheading
       {BRAC University | CSE422 }{May 2024 -- August}
-      {Lecture Support Aid}{Dhaka, Bangladesh}
+      {Lecture Support Aid }{Dhaka, Part-Time}
       \resumeItemListStart
         \resumeItem{Edited teaching materials with \LaTeX for the CSE422 (Artificial Intelligence) course, weekly}
       \resumeItemListEnd
