--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -128,7 +128,7 @@
 \begin{center}
     {\Huge \scshape Arifa Alam} \\ \vspace{1pt}
     Dhaka, Bangladesh \\ \vspace{1pt}
-    \small \raisebox{-0.1\height}\faPhone\ 617-(685)-9187 ~ \href{mailto:alamarifa9@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{alamarifa9@gmail.com}} ~ 
+    \small \raisebox{-0.1\height} \href{mailto:alamarifa9@gmail.com}{\raisebox{-0.2\height}\faEnvelope\  \underline{alamarifa9@gmail.com}} ~ 
     \href{https://www.linkedin.com/in/meowx/}{\raisebox{-0.2\height}\faLinkedin\ \underline{linkedin.com/in/meowx/}}  ~
     \href{https://github.com/MeowX-2}{\raisebox{-0.2\height}\faGithub\ \underline{github.com/MeowX-2}} ~ \href{https://meowx-2.github.io/}{\faGlobe\ \underline{meowx-2.github.io}}
     \vspace{-8pt}
