--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -200,7 +200,7 @@
       \resumeItemListEnd
 
     \resumeSubheading
-      {BRAC University | CSE422 }{May 2024 -- August}
+      {BRAC University | CSE422 }{May 2024 -- August 2024}
       {Lecture Support Aid }{Dhaka, Part-Time}
       \resumeItemListStart
         \resumeItem{Edited teaching materials with \LaTeX for the CSE422 (Artificial Intelligence) course, weekly}
