cv updated for real, and rest should also be okay!

--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -163,9 +163,10 @@
 \section{Technical Skills}
 \begin{itemize}[leftmargin=0.15in, label={}]
 	\small{\item{
-	      \textbf{Languages}{: C++, CSS, HTML, \LaTeX } \\
-	      \textbf{Technologies}{: Linux(EndeavorOS), NeoVim, GitHub, Touchtyping(70wpm)} \\
-	      \textbf{Mathematical Interests}{: Geometry, Combinatorics}\\
+	      \textbf{Languages}{: C++, CSS, HTML, TypeScript, Python, \LaTeX } \\
+	      \textbf{Technologies}{: Bashscript, Linux(EndeavorOS), NeoVim, GitHub, Touchtyping(70wpm)} \\
+	      \textbf{Mathematical Interests}{: Geometry, Combinatorics, Number Theory
+          }\\
 	      }}
 \end{itemize}
 
@@ -175,20 +176,21 @@
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{Gonitzoggo }{September 2023 -- Current}
-{Academic Team Member }{Remote, Part-time}
+{Re:Tune}{October 2024 -- Current}
+{Intern }{Remote}
 \resumeItemListStart
-\resumeItem{Mentored 200+ students throughout the course}
-\resumeItem{Mentored 50+ female math contestants exclusively}
-\resumeItem{Written notes and problemsets with \LaTeX}
+\resumeItem{Created Framework called Re:Frame using NextJS, TypeScript }
 \resumeItemListEnd
 
 \resumeSubheading
-{Gonitzoggo}{March 2024 -- Current}
-{Coordinator}{Remote, Part-time}
+{Gonitzoggo }{September 2023 -- Current}
+{Academic Team Member, Coordinator }{Remote, Part-time}
 \resumeItemListStart
+\resumeItem{Mentored 200+ students throughout the course}
+\resumeItem{Written notes and problemsets with \LaTeX}
 \resumeItem{Hosted calibration contests. }
 \resumeItemListEnd
+
 
 \resumeSubheading
 {TEMS (Truthful Enlightened Mathematical Soul) }{December 2023 -- Current}
@@ -243,3 +245,4 @@
 \resumeSubHeadingListEnd
 \end{document}
 
+i
