latex file update

--- a/uploads/CV/cv.tex
+++ b/uploads/CV/cv.tex
@@ -176,10 +176,10 @@
 \resumeSubHeadingListStart
 
 \resumeSubheading
-{Re:Tune}{October 2024 -- Current}
+{re:tune}{October 2024 -- Current}
 {Intern }{Remote}
 \resumeItemListStart
-\resumeItem{Created Framework called Re:Frame using NextJS, TypeScript }
+\resumeItem{Created Framework called Re:Frame using NextJS Framework, TypeScript }
 \resumeItemListEnd
 
 \resumeSubheading
@@ -193,11 +193,11 @@
 
 
 \resumeSubheading
-{TEMS (Truthful Enlightened Mathematical Soul) }{December 2023 -- Current}
+{TEMS (Truthful Enlightened Mathematical Soul) }{December 2023 -- January 2025}
 {Instructor, Part-time}{Dhaka, Bangladesh}
 \resumeItemListStart
 \resumeItem{Mentored 100+ students}
-\resumeItem{Provided practice materials, problems sets; graded their answerpapers}
+\resumeItem{Provided practice materials, problems sets; graded their answer papers}
 \resumeItemListEnd
 
 \resumeSubheading
